--- a/package.json
+++ b/package.json
@@ -3,11 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@auth0/auth0-react": "^1.0.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "bootstrap": "^4.5.2",
     "express-jwt": "^6.0.0",
     "express-jwt-authz": "^2.4.1",
+    "history": "^5.0.0",
     "jwks-rsa": "^1.9.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
