--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,7 @@
   "name": "teacher-app",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:3001/",
   "dependencies": {
     "@auth0/auth0-react": "^1.0.0",
     "@testing-library/jest-dom": "^4.2.4",
