--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "history": "^5.0.0",
     "jwks-rsa": "^1.9.0",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.3"
   },
