--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "express": "^4.16.3",
     "express-jwt": "^6.0.0",
     "express-jwt-authz": "^2.4.1",
+    "if-env": "^1.0.4",
     "mongoose": "^5.3.16",
-    "if-env": "^1.0.4"
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0"
   }
 }
