--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "chart.js": "^2.9.3",
+    "d3": "^6.1.1",
+    "d3-hexbin": "^0.2.2",
     "express": "^4.16.3",
     "express-jwt": "^6.0.0",
     "express-jwt-authz": "^2.4.1",
