--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.5.2",
+    "bootstrap-switch-button-react": "^1.2.0",
     "history": "^5.0.0",
     "jwks-rsa": "^1.9.0",
     "react": "^16.13.1",
